--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   image_picker: ^1.1.2
   permission_handler: ^11.4.0
   path: ^1.9.1
+  # device_info_plus: ^11.3.3
 
 dev_dependencies:
   flutter_test:
