--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   permission_handler: ^11.4.0
   path: ^1.9.1
   google_fonts: ^6.2.1
+  flutter_staggered_grid_view: ^0.7.0
+  cached_network_image: ^3.4.1
+  video_player: ^2.9.3
   # device_info_plus: ^11.3.3
 
 dev_dependencies:
